--- a/style.css
+++ b/style.css
@@ -3,16 +3,19 @@ body {
     font-family: "SoDo Sans SemiBold", Helvetica Neue, Helvetica, Arial,
         sans-serif;
 }
-
+.navbar-container {
+    box-shadow: 0px 4px 5px 0px rgba(191, 122, 122, 0.71);
+    -webkit-box-shadow: 0px 4px 5px 0px rgba(191, 122, 122, 0.71);
+    -moz-box-shadow: 0px 4px 5px 0px rgba(191, 122, 122, 0.71);
+}
 .navbar {
+    max-width: 1560px;
     padding: 20px;
     font-size: 14px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0px 4px 5px 0px rgba(191, 122, 122, 0.71);
-    -webkit-box-shadow: 0px 4px 5px 0px rgba(191, 122, 122, 0.71);
-    -moz-box-shadow: 0px 4px 5px 0px rgba(191, 122, 122, 0.71);
+    margin: auto;
 }
 
 .navbar-left svg {
@@ -24,11 +27,11 @@ body {
     text-transform: uppercase;
     font-weight: 600;
 }
-
 .navbar-left div:hover,
-.find-a-store div:hover {
+.find-a-store:hover {
     color: #00754a;
 }
+
 .navbar-left,
 .navbar-right {
     display: flex;
@@ -36,7 +39,7 @@ body {
 }
 
 .navbar-left > *,
-.navber-right > * {
+.navbar-right > * {
     margin: 10px;
 }
 
@@ -48,7 +51,7 @@ body {
 
 .sign-in,
 .join-now {
-    font-weight: 600;
+    font-weight: 500;
     border: 1px solid black;
     border-radius: 40px;
     padding: 5px 20px 5px 20px;
@@ -67,12 +70,15 @@ body {
     background-color: rgba(0, 0, 0, 0.06);
 }
 
+.container {
+    max-width: 1440px;
+    margin: auto;
+}
 .product img {
     max-width: 100%;
-    object-fit: cover;
+    object-fit: contain;
     height: 100%;
 }
-
 .product {
     display: flex;
 }
@@ -80,14 +86,23 @@ body {
 .product-left,
 .product-right {
     max-width: 50%;
+    display: flex;
     width: 50%;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    align-content: stretch;
+    flex-direction: column;
 }
 
 .product-title {
     width: 100%;
     text-align: center;
     color: white;
-    margin: auto;
+}
+.product-container {
+    margin: 40px 0px 40px 0px;
+    display: flex;
 }
 
 .product-button {
@@ -112,5 +127,10 @@ body {
 .product-description {
     text-align: center;
     padding: 30px 60px 30px 60px;
-    font-size: 30px;
+    font-size: 18px;
+}
+
+.footer {
+    padding: 50px;
+    text-align: center;
 }
